--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="dashboard">
@@ -28,7 +28,7 @@
                <div class="social">
                 <a href="https://github.com/classtapacademy" target="_blank"><img class="logo" src="/github (1).png" alt=""></a>
                 <a href="https://www.linkedin.com/in/harshit-thammisetty/" target="_blank"> <img class="logo" src="linkedin.png" alt=""></a>
-                <a href="/Tap  Logo  (1).png" target="_blank"><button class="btn">RESUME</button></a>
+                <a href="RESUME 2.pdf" target="_blank"><button class="btn">RESUME</button></a>
                </div>
                 <div class="search-bar">
                     <input type="text" placeholder="Search...">
