--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             <header class="header">
                 <h1>My Dashboard</h1>
                <div class="social">
-                <a href="https://github.com/classtapacademy" target="_blank"><img class="logo" src="/github (1).png" alt=""></a>
+                <a href="https://github.com/classtapacademy" target="_blank"><img class="logo" src="./github (1).png" alt=""></a>
                 <a href="https://www.linkedin.com/in/harshit-thammisetty/" target="_blank"> <img class="logo" src="linkedin.png" alt=""></a>
                 <a href="RESUME 2.pdf" target="_blank"><button class="btn">RESUME</button></a>
                </div>
                 <div class="search-bar">
                     <input type="text" placeholder="Search...">
-                    <button class="search-button"><img src="/search.png" alt=""></button>
+                    <button class="search-button"><img src="./search.png" alt=""></button>
                 </div>
             </header>
 
